styles-index.css
/* Master Styles */
body {
    margin: 0px;
}

.container {
    display: grid;
    grid-template-columns: 1fr;
}

/* Nav Styles */
.nav-wrapper {
    display: flex;
    justify-content: space-between;
    padding: 38px;
}

.left-side {
    display: flex;

}

.nav-wrapper > .left-side > div {
    margin-right: 20px;
    font-size: 0.9em;
    text-transform: uppercase;
}

.nav-link-wrapper {
    height: 22px;
    border-bottom: 1px solid transparent;
    transition: border-bottom 0.5s;
}

.nav-link-wrapper a {
    color: #8a8a8a;
    text-decoration: none;
    transition: color 0.5s;
}

.nav-link-wrapper:hover {
    border-bottom: 1px solid black;
}

.nav-link-wrapper a:hover {
    color: black;
}

/* Portfolio Styles */

.portfolio-items-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.portfolio-item-wrapper {
    position: relative;
}

.portfolio-img-background {
    height: 350px;
    width: 100%;
    background-size: cover;
    background-position: centre;
    background-repeat: no-repeat;
}

.portfolio-item-wrapper:hover .portfolio-img-background {
    transition: 1s;
    filter:brightness(10%);
}

.img-text-wrapper {
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 300px;
    text-align: center;
    padding-left: 100px;
    padding-right: 100px;
}

.logo-wrapper img {
    filter: brightness(0%);
    width: 50%;
    margin-bottom: 20px;
}

.a {
  height: 350px;
}

.img-text-wrapper:hover .logo-wrapper img {
    transition: 1s;
    filter: brightness(100%);
}

.img-text-wrapper .subtitle {
    transition: 1s;
    font-weight: 600;
    color: transparent;
}

.img-text-wrapper:hover .subtitle {
    font-weight: 600;
    color: lightseagreen;
}


/* About page */

.two-column-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;

}

.profile-image-wrapper img {
    width: 100%;
}

.profile-image-wrapper:hover {
    filter: brightness(10%);
}

.profile-content-wrapper {
    padding: 30px;
}

.profile-content-wrapper h1 {
    color: lightseagreen;
}


details {
  color: #ddd;
  border-radius: 0px;
  margin-bottom: 0px;
}

summary:focus {
  outline: none;
}
details ul {
  background: #ddd;
  margin: 0;
  color: black;
  border-radius: 0 0 4px 4px;
}

ul {
  padding: 100px;
  width: 258%;
}


details > summary {
  list-style: none;
}

details > summary::marker {
  display: none;
}

